tests/samples/positive/traits/trait_associated_type_where_equality.ax
module trait_associated_type_where_equality;

trait Source {
    type Item;
    fn get(self: &Self) -> Self.Item;
}

struct Bytes {
    value: i32;
}

impl Source for Bytes {
    type Item = i32;

    fn get(self: &Bytes) -> i32 {
        return self.value;
    }
}

fn read_i32<T>(value: &T) -> i32 where T: Source<Item = i32> {
    return value.get();
}

fn main() -> i32 {
    let bytes = Bytes { value: 7 };
    return read_i32<Bytes>(&bytes) - 7;
}
