tests/samples/negative/traits/trait_associated_type_projection_cycle.ax
module trait_associated_type_projection_cycle;

trait Source {
    type Item;
}

fn use_item[T](value: T) -> i32 where T: Source[Item = T.Item] {
    return 0;
}

fn main() -> i32 {
    return 0;
}
